spring-project-to-do-app-update-security

--- a/src/main/resources/templates/public/authorization/login-page.html
+++ b/src/main/resources/templates/public/authorization/login-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link th:href="@{/css/public/authorization/authorization-page.css}" rel="stylesheet">
+    <link href="/css/public/authorization/authorization-page.css" rel="stylesheet">
 </head>
 <body>
 <div class="page-wrapper">
@@ -28,7 +28,7 @@
             </form>
         </div>
         <div class="footer-link-container">
-            <span class="footer-link-container__text">Don't have an account? <a href="/account/registration" class="footer-link-container__link">Sign up</a></span>
+            <span class="footer-link-container__text">Don't have an account? <a href="/registration" class="footer-link-container__link">Sign up</a></span>
         </div>
     </div>
 </div>
