--- a/src/main/resources/templates/public/authorization/registration-page.html
+++ b/src/main/resources/templates/public/authorization/registration-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create account</title>
-    <link th:href="@{/css/public/authorization/authorization-page.css}" rel="stylesheet">
+    <link href="/css/public/authorization/authorization-page.css" rel="stylesheet">
 </head>
 <body>
 <div class="page-wrapper">
@@ -28,7 +28,7 @@
             </form>
         </div>
         <div class="footer-link-container">
-            <span class="footer-link-container__text">Already have an account? <a href="/account/login" class="footer-link-container__link">Log in</a></span>
+            <span class="footer-link-container__text">Already have an account? <a href="/login" class="footer-link-container__link">Log in</a></span>
         </div>
     </div>
 </div>
